[workspace]
members = [
	"bee-bundle",
	"bee-common",
	"bee-crypto",
	"bee-main",
	"bee-network",
	"bee-pow",
	"bee-protocol",
	"bee-signing",
	"bee-storage",
	"bee-tangle",
	"bee-ternary",
	"bee-storage",
	"bee-storage-sqlx",
	"bee-storage-sled",

	# ONLY TEMPORARY
	"iota-conversion",
	"iota-constants",
]
