[workspace]
members = [
	"bee-bundle",
	"bee-common",
	"bee-crypto",
	"bee-network",
	"bee-node",
	"bee-pow",
	"bee-peering",
	"bee-protocol",
	"bee-signing",
	"bee-snapshot",
	"bee-storage",
	"bee-tangle",
	"bee-ternary",
	"bee-storage",
	"bee-test",

	# ONLY TEMPORARY
	"iota-conversion",
	"iota-constants",
]
