[workspace]
members = [
	"bee-api",
	"bee-broker",
	"bee-common-ext",
	"bee-crypto",
	"bee-event/bee-event",
	"bee-event/bee-event-derive",
	"bee-ledger",
	"bee-network",
	"bee-node",
	"bee-peering",
	"bee-pow",
	"bee-protocol",
	"bee-signing",
	"bee-snapshot",
	# "bee-storage",
	"bee-tangle",
	"bee-ternary-ext",
	"bee-test",
	"bee-transaction",
]
