[package]
name = "bee-api"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "api"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git" }
bee-crypto = { path = "../bee-crypto" }
bee-protocol = { path = "../bee-protocol" }
bee-transaction = { path = "../bee-transaction" }
bee-tangle = { path = "../bee-tangle" }

async-std = { version = "1.6.2", features = ["attributes", "tokio02"] }
async-trait = "0.1.36"
bee-ternary = { git = "https://github.com/iotaledger/bee.git" }
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
warp = "0.2.3"