[package]
name = "bee-autopeering"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Autopeering functionality for the Bee framework."
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "peering", "autopeering"]
homepage = "https://www.iota.org"

[dependencies]

bee-network = { path = "../bee-network" }

async-std = "1.5.0"
log = "0.4.8"