[package]
name = "bee-autopeering"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Autopeering functionality for the Bee framework."
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "peering", "autopeering"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { path = "../bee-common" }
bee-network = { path = "../bee-network" }

async-std = "1.5.0"
futures = "0.3.5"
log = "0.4.8"
prost = "0.6.1"
prost-types = "0.6.1"
ring = "0.16.15"
serde = { version = "1.0.104", features = ["derive" ] }
thiserror = "1.0.20"
