[package]
name = "bee-bundle"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "bundle"]

[dependencies]
bee-crypto = { path = "../bee-crypto" }
bee-pow = { path = "../bee-pow" }
bee-signing = { path = "../bee-signing" }
bee-ternary = { path = "../bee-ternary", features = ["serde1"] }

serde = { version = "1.0", features = ["derive"] }
