[package]
name = "bee-common-ext"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Common utilities used across the bee framework"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "common"]
homepage = "https://www.iota.org"

[dependencies]
anymap = "0.12.1"
async-trait = "0.1.40"
dashmap = "3.11"
futures = "0.3.5"

[dev-dependencies]
async-std = "1.6.2"
