[package]
name = "bee-common-ext"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "Common utilities used across the bee framework"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "common"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-storage = { path = "../bee-storage/bee-storage/" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }

async-trait = "0.1"
dashmap = "3.11"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "0.3", features = ["rt"] }

[dev-dependencies]
hex = "0.4"
tokio = { version = "0.2", features = ["macros"] }
