[package]
name = "bee-common"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "common"]

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.104", features = ["derive" ] }
