[package]
name = "bee-common"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "common"]
homepage = "https://www.iota.org"

[dependencies]
async-std = "1.5.0"
chrono = "0.4.11"
err-derive = "0.2.3"
fern = { version = "0.6.0", features = ["colored"] }
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive" ] }

[dev-dependencies]
async-std = "1.5.0"
