[package]
name = "bee-crypto"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "crypto"]

[dependencies]
bee-ternary = { path = '../bee-ternary' }
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
