[package]
name = "bee-ledger"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "ledger"]

[dependencies]
bee-bundle = { path = "../bee-bundle" }

futures = "0.3.5"
log = "0.4.8"

[dev-dependencies]
bee-test = { path = "../bee-test" }

async-std = "1.4.0"
rand = "0.7.3"
