[package]
name = "bee-ledger"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "ledger"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git" }
bee-transaction = { path = "../bee-transaction" }

async-std = "1.6.2"
bytemuck = "1.2.0"
digest = "0.9.0"
futures = "0.3.5"
log = "0.4.8"

[dev-dependencies]
bee-test = { path = "../bee-test" }

blake2 = "0.9.0"
hex = "0.4.2"
rand = "0.7.3"
