[package]
name = "main"
version = "0.1.0"
authors = ["Bee developers"]
edition = "2018"

[dependencies]
bundle = { path = "../bee-bundle" }
common = { path = "../bee-common" }
network = { path = "../bee-network" }
pow = { path = "../bee-pow" }

async-std = "1.4.0"
futures = "0.3.1"
serde = { version = "1.0.104", features = ["derive" ] }
serde_json = "1.0.45"
