[package]
name = "bee-main"
version = "0.1.0"
authors = ["Bee developers"]
edition = "2018"

[dependencies]
bee-bundle = { path = "../bee-bundle" }
bee-common = { path = "../bee-common" }
bee-network = { path = "../bee-network" }
bee-pow = { path = "../bee-pow" }

async-std = "1.4.0"
crossterm = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.104", features = ["derive" ] }
serde_json = "1.0.45"
