[package]
name = "bee-network"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "network"]

[dependencies]
async-std = "1.5.0"
dashmap = "3.10.0"
err-derive = "0.2.3"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive" ] }
url = "2.1.1"

[dev-dependencies]
bincode = "1.2.1"
crossterm = "0.16.0"
env_logger = "0.7.1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serial_test = "0.4.0"
structopt = "0.3.12"
tokio = { version = "0.2.11", features = ["signal"] }
