[package]
name = "bee-network"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "network"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }

async-std = "1.6.2"
dashmap = "3.10.0"
err-derive = "0.2.3"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive" ] }
url = "2.1.1"

[dev-dependencies]
env_logger = "0.7.1"
pretty_env_logger = "0.4.0"
serial_test = "0.4.0"
structopt = "0.3.12"
tokio = { version = "0.2.11", features = ["signal"] }
