[package]
name = "bee-node"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "node"]

[dependencies]
bee-common = { path = "../bee-common" }
bee-ledger = { path = "../bee-ledger" }
bee-network = { path = "../bee-network" }
bee-peering = { path = "../bee-peering" }
bee-protocol = { path = "../bee-protocol" }
bee-snapshot = { path = "../bee-snapshot" }
bee-transaction = { path = "../bee-transaction" }

async-std = "1.4.0"
chrono = "0.4.11"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive" ] }
structopt = { version = "0.3.14", default-features = false }
toml = "0.5.6"
