[package]
name = "bee-node"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "node"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-common-ext = { path = "../bee-common-ext" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-ledger = { path = "../bee-ledger" }
bee-network = { path = "../bee-network" }
bee-peering = { path = "../bee-peering" }
bee-protocol = { path = "../bee-protocol" }
bee-snapshot = { path = "../bee-snapshot" }
bee-transaction = { path = "../bee-transaction" }
bee-storage = { path = "../bee-storage/bee-storage" }
bee-storage-rocksdb = { path = "../bee-storage/bee-storage-rocksdb" }

anymap = "0.12.1"
async-trait = "0.1.40"
flume = "0.9.1"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.114", features = ["derive" ] }
structopt = { version = "0.3.14", default-features = false }
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["signal", "macros"] }
toml = "0.5.6"

[lib]
name = "bee_node"
path = "src/lib.rs"

[[bin]]
name = "bee"
path = "src/main.rs"
