[package]
name = "bee-peering"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "peering"]

[dependencies]

bee-network = { path = "../bee-network" }

async-std = "1.5.0"
async-trait = "0.1.24"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive" ] }
