[package]
name = "bee-pow"
version = "0.1.0"
authors = ["Bee developers"]
edition = "2018"

[dependencies]
bee-common = { path = "../bee-common" }
bee-crypto = { path = "../bee-crypto" }

crossbeam = "0.7.3"
num_cpus = "1.11.1"
serde = { version = "1.0.104", features = ["derive" ] }
serde_json = "1.0.45"
