[package]
name = "bee-pow"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "pow"]

[dependencies]
bee-common = { path = "../bee-common" }

crossbeam = "0.7.3"
num_cpus = "1.11.1"
serde = { version = "1.0.104", features = ["derive" ] }
