[package]
name = "bee-protocol"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "protocol"]

[dependencies]
bee-crypto = { path = "../bee-crypto" }
bee-network = { path = "../bee-network" }
bee-signing = { path = "../bee-signing" }
bee-tangle = { path = "../bee-tangle" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git" }
bee-ternary-ext = { path = "../bee-ternary-ext" }
bee-transaction = { path = "../bee-transaction" }

async-std = "1.5.0"
bytemuck = "1.2.0"
dashmap = "3.11"
futures = "0.3.5"
futures-util = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive" ] }
twox-hash = "1.5.0"

[dev-dependencies]
bee-test = { path = "../bee-test" }

rand = "0.7.3"
