[package]
name = "bee-signing-ext"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "IOTA signing primitives"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "signing"]
homepage = "https://www.iota.org"

[dependencies]
bee-common-derive = { git = "https://github.com/iotaledger/bee.git" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", features = ["serde1"] }

ed25519-dalek = { version = "1.0.0-pre.4", features = ["serde"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
signature = "1.2"
slip10 = "0.1"
thiserror = "1.0.20"
zeroize = "1.1.0"
