[package]
name = "bee-signing-ext"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = "IOTA signing primitives"
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "signing"]
homepage = "https://www.iota.org"

[features]
default = ["std"]
std = ["rand", "bee-crypto", "bee-ternary", "bee-signing"]

[dependencies]
bee-common-derive = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
ed25519-dalek = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
signature = "1.2"
slip10 = "0.4"
zeroize = "1.1"
# std feature
rand = { version = "0.7", optional = true }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = ["serde1"], optional = true }
bee-signing = { git = "https://github.com/iotaledger/bee.git", branch = "dev", optional = true  }
