[package]
name = "bee-signing"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "signing"]

[dependencies]
bee-crypto = { path = "../bee-crypto" }
bee-ternary = { path = "../bee-ternary" }

ed25519-dalek = "1.0.0-pre.3"
rand = "0.7"
tiny-bip39 = { git =  "https://github.com/maciejhirsz/tiny-bip39.git" }
