[package]
name = "bee-snapshot"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "snapshot"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { path = "../bee-crypto" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git" }
bee-transaction = { path = "../bee-transaction" }

async-std = "1.4.0"
bytemuck = "1.2.0"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive" ] }
