[package]
name = "bee-snapshot"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "snapshot"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-transaction = { path = "../bee-transaction" }

bytemuck = "1.2.0"
log = "0.4.8"
reqwest = { version = "0.10.7", features = ["stream"] }
serde = { version = "1.0.114", features = ["derive" ] }
tokio = "0.2.22"
