[package]
name = "bee-snapshot"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "snapshot"]
homepage = "https://www.iota.org"

[dependencies]
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-common-ext = { path = "../bee-common-ext" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-tangle = { path = "../bee-tangle"}
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-transaction = { path = "../bee-transaction" }
bee-storage = { path = "../bee-storage/bee-storage" }

async-trait = "0.1.40"
bytemuck = "1.2.0"
chrono = "0.4.11"
dashmap = "3.10"
flume = "0.9.1"
futures = "0.3.5"
log = "0.4.8"
reqwest = { version = "0.10.7", features = ["stream"] }
serde = { version = "1.0.114", features = ["derive" ] }
tokio = "0.2.22"
