[package]
name = "backends"
version = "0.1.0"
authors = ["tsvi <tsvi.sabo@iota.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../bee-storage" }
bundle = { path = "../bee-bundle" }
sqlx = {version = "0.2.5", features = [ "postgres" ]}
async-std = { version = "1.4.0", features = [ "attributes" ] }
async-trait = "0.1.22"
futures = "0.3.1"
serde = "1.0.104"
bincode = "1.2.1"
rand = "0.7.3"
num_cpus = "1.12.0"
