[package]
name = "bee-storage-rocksdb"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "storage", "rocksdb"]
homepage = "https://www.iota.org"

[dependencies]
bee-storage = {path = "../bee-storage"}
bee-protocol = {path = "../bee-protocol"}
bee-transaction = {path = "../bee-transaction"}
bee-ledger = {path = "../bee-ledger"}
bee-crypto = "0.2.0-alpha"

rocksdb = { version = "0.15.0", default-features = false }
async-trait = "0.1.36"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
