[package]
name = "bee-storage-sqlx"
version = "0.1.0"
authors = ["Bee developers"]
edition = "2018"

[dependencies]
bee-storage = { path = "../bee-storage" }
bee-bundle = { path = "../bee-bundle" }
bee-test = { path = "../bee-test"}

async-std = { version = "1.4.0", features = [ "attributes" ] }
async-trait = "0.1.22"
bincode = "1.2.1"
futures = "0.3.1"
num_cpus = "1.12.0"
rand = "0.7.3"
serde = "1.0.104"
sqlx = {version = "0.2.5", features = [ "postgres" ]}
