[package]
name = "bee-storage"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "storage"]
homepage = "https://www.iota.org"

[dependencies]
bee-protocol = { path = "../bee-protocol"}
bee-ternary = { git = "https://github.com/christianpoveda/bee.git", branch = "btc-curl-2" }
bee-transaction = { path = "../bee-transaction" }

async-std = { version = "1.6.2", features = [ "attributes" ] }
async-trait = "0.1.36"
bincode = "1.2.1"
bytemuck = "1.2.0"
futures = "0.3.5"
itertools = "0.9.0"
num_cpus = "1.12.0"
rand = "0.7.3"
rocksdb = { version = "0.14.0", default-features = false }
sqlx = {version = "0.3.2", features = [ "postgres" ]}

[dev-dependencies]
bee-test = { path = "../bee-test"}
