[package]
name = "bee-storage"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "storage"]
homepage = "https://www.iota.org"

[dependencies]
async-trait = "0.1.36"

[dev-dependencies]
bee-test = {path = "../bee-test"}

async-std = "1.6.2"

[features]
default = ["rocks_db"]
rocks_db = []
