[package]
name = "bee-storage"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "storage"]
homepage = "https://www.iota.org"

[dependencies]
async-trait = "0.1.36"
num_cpus = "1.12.0"
bytemuck = "1.2.0"
rocksdb = { version = "0.14.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

[dev-dependencies]
bee-test = {path = "../bee-test"}

[features]
default = ["rocks_db"]
rocks_db = []
