[package]
name = "bee-tangle"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { git = "https://github.com/christianpoveda/bee.git", branch = "btc-curl-2" }
bee-transaction = { path = "../bee-transaction" }

async-std = { version = "1.6.2", features = ["unstable"] }
dashmap = "3.10"

[dev-dependencies]
bee-crypto = { git = "https://github.com/christianpoveda/bee.git", branch = "btc-curl-2" }
bee-test = { path = "../bee-test" }

criterion = "0.3.2"

[[bench]]
name = "bench"
harness = false
