[package]
name = "bee-ternary-ext"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "ternary"]
homepage = "https://www.iota.org"

[dependencies]
byteorder = "1.3.4"
lazy_static = "1.4.0"
bee-ternary = { git = "https://github.com/iotaledger/bee.git" }

[dev-dependencies]
rand = "0.7.3"
serde_json = "1.0"
