[package]
name = "bee-ternary"
version = "0.1.0"
authors = ["Bee developers"]
edition = "2018"

[dependencies]
bee-common = { path = "../bee-common" }
serde = { version = "1.0", optional = true }

# ONLY TEMPORARY
iota-conversion = { path = "../iota-conversion" }

#[dev-dependencies]
rand = "0.7"
serde_json = "1.0"
lazy_static = "1.4.0"
byteorder = "1.3.4"

[features]
serde1 = ["serde"]
