[package]
name = "bee-ternary"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "ternary"]

[dependencies]
bee-common = { path = "../bee-common" }
serde = { version = "1.0", optional = true }

#[dev-dependencies]
byteorder = "1.3.4"
lazy_static = "1.4.0"
rand = "0.7"
serde_json = "1.0"

[features]
serde1 = ["serde"]
