[package]
name = "bee-test"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "test"]

[dependencies]
bee-protocol = { path = "../bee-protocol" }
bee-tangle = { path = "../bee-tangle" }
bee-ternary = { path = "../bee-ternary" }
bee-transaction = { path = "../bee-transaction" }

async-std = { version = "1.4.0", features = [ "attributes" ] }
futures = "0.3.5"
num_cpus = "1.12.0"
rand = "0.7.3"
