[package]
name = "bee-test"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "test"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-protocol = { path = "../bee-protocol" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-transaction = { path = "../bee-transaction" }
bee-storage = { path = "../bee-storage" }

bee-storage-rocksdb = { path = "../bee-storage-rocksdb" }
bee-ledger = { path = "../bee-ledger" }

futures = "0.3.5"
num_cpus = "1.12.0"
rand = "0.7.3"
tokio = { version = "0.2.22", features = ["macros"] }
