[package]
name = "bee-transaction"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "transaction"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-signing = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-signing-ext = { git ="https://github.com/wusyong/bee-p", branch = "sign-ext" }
bee-ternary = { git = "https://github.com/iotaledger/bee.git", branch = "dev", features = ["serde1"] }

bech32 = "0.7.2"
thiserror = "1.0"

[dev-dependencies]
hex-literal = "0.3.1"
