[package]
name = "bee-transaction"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "transaction"]
homepage = "https://www.iota.org"

[dependencies]
iota-crypto = { git = "https://github.com/thibault-martinez/crypto.rs", branch = "wots", features = ["wots_deprecated_do_not_use", "kerl_deprecated_do_not_use"] }
bee-ternary = { version = "0.4.2-alpha", features = ["serde1"] }

serde = "1.0"
thiserror = "1.0"
